working health_statuses

--- a/server/moodhub/app/views/health_statuses/_form.html.erb
+++ b/server/moodhub/app/views/health_statuses/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :s3_image_id %>
-    <%= form.number_field :s3_image_id, id: :health_status_s3_image_id %>
+    <%= form.text_field :s3_image_id, id: :health_status_s3_image_id %>
   </div>
 
   <div class="actions">
