--- a/server/moodhub/app/views/health_statuses/index.html.erb
+++ b/server/moodhub/app/views/health_statuses/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>User</th>
       <th>S3 image</th>
+      <th>Happiness level</th>
+      <th>Rekognition dump</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td><%= health_status.user_id %></td>
         <td><%= health_status.s3_image_id %></td>
+        <td><%= health_status.happiness_level %></td>
+        <td><%= health_status.rekognition_dump %></td>
         <td><%= link_to 'Show', health_status %></td>
         <td><%= link_to 'Edit', edit_health_status_path(health_status) %></td>
         <td><%= link_to 'Destroy', health_status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
