dashboard dummy data working

--- a/dashboard/album.css
+++ b/dashboard/album.css
@@ -56,3 +56,12 @@ footer {
 footer p {
   margin-bottom: .25rem;
 }
+
+.btn-primary {
+    padding: 18px 28px;
+    font-size: 22px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
+    }
