--- a/server/moodhub/app/views/dashboard/view.html.erb
+++ b/server/moodhub/app/views/dashboard/view.html.erb
@@ -2,4 +2,5 @@
 <p>Find me in app/views/dashboard/view.html.erb</p>
 
 
-<%= @data.to_json %>
+<script>var fakeData = <%= @data.to_json.to_s.html_safe %>
+</script>
